<resources>
    <string name="app_name">Password</string>
    <string name="appname">App Name</string>
    <string name="textInstructions">Ingresa utilizando tu contraseña o huella digital!!!</string>
    <string name="contrase_a">Contraseña</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="createpass">Crear contraseña</string>
    <string name="verifique_contra">Verifique la contraseña</string>
    <string name="creeContra">Elija una contraseña</string>
    <string name="crear">Crear</string>
    <string name="todo">TODO</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="short_by_magnitude">short_by_magnitude</string>
    <string name="item_1">Favoritos</string>
    <string name="item_2">Tipos de servicios</string>
    <string name="item_3">Tipos de servicios</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="title_1">Title 1</string>
    <string name="prueba">Prueba</string>
    <string name="image_icon">Image icon</string>
    <string name="icono_inicial">Icono inicial</string>
    <string name="copy_pass">Copy pass</string>
    <string name="view_pass">view pass</string>
    <string name="copy_email">copy email</string>
    <string name="_13isaias_live_com_mx">13isaias@live.com.mx</string>
    <string name="insert_email">Ingresa tu Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credencial">CREDENCIAL</string>

    <string name="parametros_de_la_contrase_a">Parametros de la contraseña</string>
    <string name="comentario">Comentario</string>
    <string name="generar_nueva_contrase_a">Generar nueva contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="tipo_de_servicio">Tipo de servicio</string>


    <string name="tipo_de_servicio_mod" formatted="true">
    Tipo de servicio: %s
</string>
    <string name="servicio">SERVICIO</string>
    <string name="nombre">Nombre</string>
    <string name="crear_password_fracment">Crear password Fracment</string>
    <string name="home_fracment">Fracment principal</string>
    <string name="slider_desc">slider_desc</string>
    <string name="registrar_usuario">Registrar Usuario</string>
</resources>