<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/title_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:text="@string/usuario"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/email_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_user"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        android:text="@string/_13isaias_live_com_mx"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/play_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_user"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="20dp"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_file_copy"
        android:contentDescription="@string/copy_email" />

    <LinearLayout
        android:id="@+id/title_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_name_text">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/contrase_a"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="16dp"
        tools:text="contraseniaprueba"
        android:textColor="@color/black"
        android:layout_below="@+id/title_pass"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/view_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_pass"
        android:layout_marginEnd="-135dp"
        android:layout_toStartOf="@+id/copy_pass"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:contentDescription="@string/view_pass" />

    <ImageView
        android:id="@+id/copy_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_pass"
        android:layout_alignEnd="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="20dp"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_file_copy"
        android:contentDescription="@string/copy_pass" />



</RelativeLayout>