<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.inicio.CreateUser">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="179dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_security" />

        <TextView
            android:id="@+id/textindicator"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="92dp"
            android:layout_marginTop="138dp"
            android:layout_marginEnd="95dp"
            android:text="@string/createpass"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />


        <EditText
            android:id="@+id/user_create_email"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textindicator"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="73dp"
            android:autofillHints="@string/insert_email"
            android:hint="@string/insert_email"
            android:inputType="number"
            android:textSize="@dimen/text" />


        <EditText
            android:id="@+id/firstContra"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_create_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="73dp"
            android:autofillHints="@string/insert_email"
            android:hint="@string/creeContra"
            android:inputType="number"
            android:textSize="@dimen/text" />

        <EditText
            android:id="@+id/firstContraverific"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstContra"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="73dp"
            android:autofillHints="insert pass"
            android:hint="@string/verifique_contra"
            android:inputType="number"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/create"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstContraverific"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="136dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="125dp"
            android:text="@string/crear"
            android:textSize="@dimen/text" />
    </RelativeLayout>
</layout>