<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_credential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/credencial"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/input_credential"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_credential"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/User_credential"
                android:layout_width="375dp"
                android:layout_height="40dp"
                android:background="@drawable/style_text_box"
                android:hint="@string/usuario"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/password_end"
                android:layout_width="375dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_text_box"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/generate_credential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_credential"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="364dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/generar_nueva_contrase_a"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/generate_pass"
                android:layout_width="47dp"
                android:layout_height="40dp"
                android:contentDescription="generate_pass"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_refresh_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/parameter_credential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/generate_credential"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="364dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/parametros_de_la_contrase_a"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="47dp"
                android:layout_height="40dp"
                android:contentDescription="parameter_image"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_more_vert_24" />

        </LinearLayout>

        <EditText
            android:id="@+id/cometary_pass_create"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/parameter_credential"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_text_box"
            android:hint="@string/comentario"
            android:inputType="text"
            android:paddingStart="16dp" />

        <Button
            android:id="@+id/Save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cometary_pass_create"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="Guardar" />
    </RelativeLayout>
</layout>